--- a/main.ipynb
+++ b/main.ipynb
@@ -2,39 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "c92ce69d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "[notice] A new release of pip is available: 23.2.1 -> 25.1.1\n",
-      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "! pip install requests tqdm --quiet"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": null,
    "id": "9a56f556",
    "metadata": {},
    "outputs": [],
    "source": [
     "import requests\n",
     "from tqdm import tqdm\n",
-    "from time import sleep"
+    "from time import sleep, time"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": null,
    "id": "0ce792ac",
    "metadata": {},
    "outputs": [],
@@ -44,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "d8209809",
    "metadata": {},
    "outputs": [],
@@ -64,12 +54,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": null,
    "id": "dcfa00be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "COUNT = 1000"
+    "# COUNT = 1000"
    ]
   },
   {
@@ -79,7 +69,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# COUNT = 10_000"
+    "COUNT = 1_00_00_00 # 1 million"
    ]
   },
   {
@@ -92,29 +82,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "6b3d7928",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Creating URLs: 100%|██████████| 1000/1000 [00:08<00:00, 115.08it/s]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = f\"{BASE_URL}/shorten\"\n",
     "\n",
-    "for i in tqdm(range(COUNT), desc=\"Creating URLs\"):\n",
+    "start_time = time()\n",
+    "\n",
+    "for i in tqdm(range(COUNT), desc=\"Inserting URLs...\"):\n",
     "    long_url = f\"https://example.com/resource/{i}\"\n",
     "    payload = {\n",
     "        \"url\": long_url\n",
     "    }\n",
     "\n",
-    "    if i % 1000 == 0 and i > 0:\n",
-    "        sleep(1)\n",
     "    try:\n",
     "        res = requests.post(url, json=payload)\n",
     "        if res.status_code == 200:\n",
@@ -126,27 +108,20 @@
     "            failed += 1\n",
     "    except Exception as e:\n",
     "        print(f\"❌ Exception for {long_url}: {e}\")\n",
-    "        failed += 1"
+    "        failed += 1\n",
+    "\n",
+    "end_time = time()\n",
+    "elapsed = end_time - start_time\n",
+    "\n",
+    "print(f\"\\n✅ Time taken {elapsed:.2f} seconds\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": null,
    "id": "46f390a0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "✅ Success: 1000 | ❌ Failed: 0\n",
-      "\n",
-      "Sample Short URLs:\n",
-      "['http://localhost:5000/d/f6019d', 'http://localhost:5000/d/a80e97', 'http://localhost:5000/d/f33c3f', 'http://localhost:5000/d/9d2bba', 'http://localhost:5000/d/643d24']\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(f\"\\n✅ Success: {success} | ❌ Failed: {failed}\")\n",
     "print(\"\\nSample Short URLs:\")\n",
@@ -163,27 +138,64 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": null,
+   "id": "da5358d3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Pick 5 random responses\n",
+    "sampled = random.sample(responses, 5)\n",
+    "sampled"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "bd8dfbee",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Long URL for http://localhost:5000/d/f6019d: https://example.com/resource/999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "url = f\"{BASE_URL}/u/{responses[-1].split('/')[-1]}\"\n",
+    "def get_long_url(short_url):\n",
+    "    url = f\"{BASE_URL}/u/{short_url.split('/')[-1]}\"\n",
+    "    res = requests.get(url)\n",
+    "    return res"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "44beb9f7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for item in sampled:\n",
+    "    res = get_long_url(item)\n",
+    "    if res.status_code == 200:\n",
+    "        print(f\"\\nLong URL for {item}: {res.json()['url']}\")\n",
+    "    else:\n",
+    "        print(f\"❌ Failed to fetch long URL: {res.status_code}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6e0db086",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# count = 1_00_00_00\n",
+    "count = 1_000\n",
     "\n",
-    "res = requests.get(url)\n",
-    "if res.status_code == 200:\n",
-    "    print(f\"\\nLong URL for {responses[0]}: {res.json()['url']}\")\n",
-    "else:\n",
-    "    print(f\"❌ Failed to fetch long URL: {res.status_code}\")"
+    "start_time = time()\n",
+    "for i in tqdm(range(count)):\n",
+    "    get_long_url(responses[i])\n",
+    "\n",
+    "end_time = time()\n",
+    "elapsed = end_time - start_time\n",
+    "\n",
+    "print(f\"\\n✅ Time taken {elapsed:.2f} seconds\")"
    ]
   },
   {
@@ -196,20 +208,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "db325dbb",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Database Info:\n",
-      "{'size': '229.38 kB', 'row_count': 1002}\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "url = f\"{BASE_URL}/disk-usage\"\n",
     "\n",
